force-app/main/default/objects/Int_Party_External_Reference__c/Int_Party_External_Reference__c.object-meta.xml
<CustomObject>
    <description>Int Party External Reference</description>
    <label>Int Party External Reference</label>
    <nameField>
        <displayFormat>PER-{0000000000}</displayFormat>
        <label>Party External Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party External References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>