force-app/main/default/objects/Int_Party_External_Reference__c/fields/External_Identifier__c.field-meta.xml
<CustomField>
    <fullName>External_Identifier__c</fullName>
    <description>External Identifier</description>
    <label>External Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>