force-app/main/default/objects/Int_Party_External_Reference__c/fields/External_Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Identifier_Type__c</fullName>
    <description>External Identifier Type</description>
    <label>External Identifier Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>