force-app/main/default/objects/Int_Party_External_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Party_Name__c</columns>
    <columns>External_Identifier_Type__c</columns>
    <columns>External_Identifier__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Party_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>